# Spitfire-Launcher

./: README.md  package.json
.github/: CODEOWNERS
messages/: de.json  en.json  es.json  fr.json  pt-br.json  tr.json
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: async-lock.ts  http.ts  tauri.ts  utils.ts
src/lib/components/: Sidebar.svelte
src/lib/components/ui/: BulkResultAccordion.svelte  InputWithAutocomplete.svelte
src/lib/constants/: mcp.ts  sidebar.ts
src/lib/constants/stw/: resources.ts  world-info.ts
src/lib/core/: manifest.ts
src/lib/core/services/: tauri-ky.ts
src/lib/data/: default-party-member-meta.json  homebase-rating-mapping.json  index.ts
src/lib/exceptions/: EpicAPIError.ts
src/lib/modules/: auth-session.ts  authentication.ts  avatar.ts  code.ts  device-auth.ts  download.svelte.ts  eula.ts  friends.ts  legendary.ts  lookup.ts  manifest.ts  mcp.ts  notification.ts  party.ts  server-status.ts  shop.ts  spitfire.ts  taxi.svelte.ts  world-info.ts  xmpp.ts
src/lib/modules/autokick/: base.ts  claim-rewards.ts  manager.ts  transfer-building-materials.ts
src/lib/schemas/: settings.ts
src/lib/services/: epic.ts
src/lib/storage/: account.ts
src/lib/stores/: cache.ts  index.ts  owned-items.ts  shop.ts
src/lib/types/: account.d.ts  account.ts  github.ts  legendary.ts  lucide.ts  settings.ts  spitfire.ts
src/lib/types/game/: authorizations.ts  avatar.ts  eula.ts  events.ts  fulfillment.ts  lookup.ts  mcp.ts  party.ts  server-status.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/settings/: +page.svelte
(+52 files in other folders)
