[package]
name = "spitfire-launcher"
version = "1.7.0"
description = "A cross-platform launcher for Fortnite Battle Royale and Save the World"
authors = ["bur4ky"]
edition = "2021"

[lib]
name = "spitfire_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-websocket = "2"
sys-locale = "0.3"
tauri-plugin-prevent-default = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
sysinfo = "0.37"
tokio = "1"
fs2 = "0.4"
shlex = "1"
discord-rich-presence = "1.0.0"
